    - Finally fixed the elusive error when getLastLocation() throws a NullPointerException.
    - Fixed an infinite loop when a player uses a fly hack over void.
    - Added support for Register 2.0 (Register.jar) - Supports iConomy5, iConomy6, EssentialsEco, BOSEconomy.
      (https://github.com/iConomy/Register/tree/master/dist)
    - Towny will no longer cause an exception if users attempt to use iConomy 6 instead of 5.01 natively.
    - Added some new permission nodes.
    
      - towny.town.delete : player can delete their town
      - towny.town.rename : player can rename their town
      - towny.town.toggle.* : User has access to all town toggle commands (if a mayor or assistant).
      - towny.town.toggle.pvp : If a mayor or assistant, the user is able to toggle pvp on/off in their town.
      - towny.town.toggle.public : If a mayor or assistant....
      - towny.town.toggle.explosions : If a mayor or assistant....
      - towny.town.toggle.fire : If a mayor or assistant....
      - towny.town.toggle.mobs :  If a mayor or assistant....
      - towny.nation.delete : player can delete their nation
      - towny.nation.rename : player can rename their nation
      - towny.nation.grant-titles : King can set nation members titles and surnames '/nation set [title/surname]'.
      - towny.nation.* : Grants all Nation permission nodes.
      
    - Added 'towny time' : Displays the time until a new day is scheduled.
    - Players can no longer attack another players tamed wolf if in a non PVP area (can attack own).
    - Added new API functions
      TownyUniverse.getTownBlock(location)
      TownyUniverse.getCachePermission(player,location,action)
    - Towny will now check the Craftbukkit version and disable itself if it's too old.
v0.76.1.1:
    - Fixed economy errors when using register and iCo6.
    - Fixed an error caused by players setting a town or nation bank cap as a double (now accepts 0.0).