@@ -582,3 +582,4 @@ v0.76.1.0:
 v0.76.1.1:
     - Fixed economy errors when using register and iCo6.
     - Fixed an error caused by players setting a town or nation bank cap as a double (now accepts 0.0).
+    - Added sanity checking on values pulled from the config.yml.
